Bug 966683 - Australis - automatically toggle accesskey-focuses on Linux to prevent menubar focus stealing, r=Neil,dao, a=sylvestre