layout/build/nsLayoutStatics.cpp
@@ -73,6 +73,8 @@
 #include "nsXULTooltipListener.h"
 
 #include "inDOMView.h"
+
+#include "nsMenuBarListener.h"
 #endif
 
 #include "nsHTMLEditor.h"
@@ -283,6 +285,10 @@ nsLayoutStatics::Initialize()
   InitializeDateCacheCleaner();
 
   HTMLVideoElement::Init();
+
+#ifdef MOZ_XUL
+  nsMenuBarListener::InitializeStatics();
+#endif
 
   CacheObserver::Init();
 
