browser/app/profile/firefox.js
@@ -1358,3 +1358,8 @@ pref("identity.fxaccounts.settings.uri", "https://accounts.firefox.com/settings"
 
 // The URL of the Firefox Accounts auth server backend
 pref("identity.fxaccounts.auth.uri", "https://api.accounts.firefox.com/v1");
+
+// On GTK, we now default to showing the menubar only when alt is pressed:
+#ifdef MOZ_WIDGET_GTK
+pref("ui.key.menuAccessKeyFocuses", true);
+#endif
